Set field as optional in tree views

--- a/view/period_tree.xml
+++ b/view/period_tree.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <data>
     <xpath expr="/tree/field[@name='type']" position="after">
-        <field name="inflation_index"/>
+        <field name="inflation_index" optional="0"/>
     </xpath>
 </data>
