--- a/view/account_list.xml
+++ b/view/account_list.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <data>
     <xpath expr="/tree/field[@name='type']" position="after">
-        <field name="inflation_adjustment"/>
+        <field name="inflation_adjustment" optional="0"/>
     </xpath>
 </data>
